keep original scope when reinterpreting `char*` as ByteBuffer