@@ -166,26 +166,20 @@ final class FuseImpl extends Fuse {
 
 	@VisibleForTesting
 	int getxattr(MemorySegment path, MemorySegment name, MemorySegment value, long size) {
-		try (var arena = Arena.ofConfined()) {
-			var val = value.reinterpret(size, arena, null).asByteBuffer();
-			return fuseOperations.getxattr(path.getUtf8String(0), name.getUtf8String(0), val);
-		}
+		var val = value.reinterpret(size).asByteBuffer();
+		return fuseOperations.getxattr(path.getUtf8String(0), name.getUtf8String(0), val);
 	}
 
 	@VisibleForTesting
 	int setxattr(MemorySegment path, MemorySegment name, MemorySegment value, long size, int flags) {
-		try (var arena = Arena.ofConfined()) {
-			var val = value.reinterpret(size, arena, null).asByteBuffer();
-			return fuseOperations.setxattr(path.getUtf8String(0), name.getUtf8String(0), val, flags);
-		}
+		var val = value.reinterpret(size).asByteBuffer();
+		return fuseOperations.setxattr(path.getUtf8String(0), name.getUtf8String(0), val, flags);
 	}
 
 	@VisibleForTesting
 	int listxattr(MemorySegment path, MemorySegment value, long size) {
-		try (var arena = Arena.ofConfined()) {
-			var val = value.reinterpret(size, arena, null).asByteBuffer();
-			return fuseOperations.listxattr(path.getUtf8String(0), val);
-		}
+		var val = value.reinterpret(size).asByteBuffer();
+		return fuseOperations.listxattr(path.getUtf8String(0), val);
 	}
 
 	@VisibleForTesting
@@ -211,7 +205,7 @@ final class FuseImpl extends Fuse {
 
 	private int read(MemorySegment path, MemorySegment buf, long size, long offset, MemorySegment fi) {
 		try (var arena = Arena.ofConfined()) {
-			var buffer = buf.reinterpret(size, arena, null).asByteBuffer();
+			var buffer = buf.reinterpret(size).asByteBuffer();
 			return fuseOperations.read(path.getUtf8String(0), buffer, size, offset, new FileInfoImpl(fi, arena));
 		}
 	}
@@ -223,10 +217,8 @@ final class FuseImpl extends Fuse {
 	}
 
 	private int readlink(MemorySegment path, MemorySegment buf, long len) {
-		try (var arena = Arena.ofConfined()) {
-			var buffer = buf.reinterpret(len, arena, null).asByteBuffer();
-			return fuseOperations.readlink(path.getUtf8String(0), buffer, len);
-		}
+		var buffer = buf.reinterpret(len).asByteBuffer();
+		return fuseOperations.readlink(path.getUtf8String(0), buffer, len);
 	}
 
 	private int release(MemorySegment path, MemorySegment fi) {
@@ -290,7 +282,7 @@ final class FuseImpl extends Fuse {
 
 	private int write(MemorySegment path, MemorySegment buf, long size, long offset, MemorySegment fi) {
 		try (var arena = Arena.ofConfined()) {
-			var buffer = buf.reinterpret(size, arena, null).asByteBuffer();
+			var buffer = buf.reinterpret(size).asByteBuffer();
 			return fuseOperations.write(path.getUtf8String(0), buffer, size, offset, new FileInfoImpl(fi, arena));
 		}
 	}
